--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -1,1 +1,12 @@
-<h2>Hello from index.erb</h2>
+<div class="items">
+    <%@items.each do |item|%>
+        <div class="wrapitems">
+            <%imglink = item["image"]%>
+            <%name = item["name"]%>
+            <%price = item["price"]%>
+            <img src="<%=imglink%>" width="500" height="600"></img>
+            <h2><%=name%></h2>
+            <h2><%=price%>kr</h2>
+        </div>
+    <%end%>
+</div>
