--- a/src/views/layout.erb
+++ b/src/views/layout.erb
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello from layout.erb</h1>
     <%= yield %>
-    <span>Hello again from layout.erb</span>
 </body>
 </html>
