--- a/src/views/layout.erb
+++ b/src/views/layout.erb
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
+    <% if session[:username] %>
+        <p>Logged in as <%= session[:username] %></p>
+    <% end %>
 </head>
 <body>
     <%= yield %>
