--- a/src/views/register.erb
+++ b/src/views/register.erb
@@ -17,7 +17,7 @@
         <label for="address">Address:</label>
         <input type="text" id="address" name="address" required><br>
 
-        <input type="submit" value="Login">
+        <input type="submit" value="Register">
 
         <p><%= error_message %></p>
 
