--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -25,6 +25,6 @@
                 <h2><%=price%>kr</h2>
             </div>
         </a>
-    </form>
+        <a href="http://localhost:9292/item/<%=item["id"]%>/edit">EDIT ITEM</a>
     <%end%>
 </div>
