--- a/src/views/info.erb
+++ b/src/views/info.erb
@@ -1,10 +1,10 @@
-<img src="<%=@items.first["image"]%>" width="500" height="600"></img>
+<img src="<%=@item["image"]%>" width="500" height="600"></img>
 <p>pick size</p>
-<form action="/info/<%=@items.first["id"]%>" method = "POST">
+<form action="/info/<%=@item["id"]%>" method = "POST">
     <label for ="size">size</label>
     <select name="size" id="size">
-        <%@items.each do |item|%>
-            <option value=<%=item["size_id"]%>><%=item["name"]%></option>
+        <%@sizes.each do |size|%>
+            <option value=<%=size["size_id"]%>><%=size["name"]%></option>
         <%end%>
     </select>
     <button type="submit">Add to cart</button>
