--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -8,7 +8,7 @@
     <a href="/register"> REGISTER</a>
 <%end%>
 <%if session[:role] == "admin"%>
-    <a href="/admin"> ADMIN</a>
+    <a href="/"> ADMIN</a>
 <%end%>
 <br>
 <br>
